tests-integration/tests/roundtrip/invalid/syntax/malformed_line/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/malformed_line/02/input.essence:2:1:
  |
2 | print a
  | ^
Missing ,

tests/roundtrip/invalid/syntax/malformed_line/02/input.essence:2:7:
  |
2 | print a
  |       ^
Missing ,

tests/roundtrip/invalid/syntax/malformed_line/02/input.essence:2:8:
  |
2 | print a
  |        ^
Missing Domain

tests/roundtrip/invalid/syntax/malformed_line/02/input.essence:2:8:
  |
2 | print a
  |        ^
Missing :

